--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src/* --fix"
+    "lint": "eslint . --fix"
   },
   "eslintConfig": {
     "extends": [
