--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,11 @@
     "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
