--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -4,15 +4,17 @@
         "es2021": true
     },
     "extends": [
+        "prettier",
         "airbnb-base"
     ],
-    "parser": "@typescript-eslint/parser",
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
     },
     "plugins": [
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "prettier"
     ],
     "rules": {
         "import/extensions": [
