--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "db:reset": "knex migrate:rollback --all && knex migrate:latest",
     "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
     "lint": "eslint src/**/*.ts --fix && prettier --config .prettierrc.json 'src/**/*.ts' --write"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "babel-eslint": "^10.1.0",
@@ -27,6 +29,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "knex": "^0.95.7",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "uuid": "^8.3.2"
   }
 }
