--- a/frontend/mobile/.eslintrc.json
+++ b/frontend/mobile/.eslintrc.json
@@ -1,12 +1,15 @@
 {
   "env": {
-    "es2021": true
+    "es2021": true,
+    "react-native/react-native": true
   },
   "extends": [
     "plugin:react/recommended",
     "airbnb",
+    "airbnb/hooks",
+    "prettier",
     "plugin:@typescript-eslint/recommended",
-    "prettier"
+    "plugin:import/typescript"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -16,10 +19,31 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint", "prettier"],
+  "plugins": [
+    "react",
+    "react-native",
+    "prettier",
+    "import",
+    "@typescript-eslint"
+  ],
   "rules": {
     "no-use-before-define": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".jsx", ".tsx"] }],
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "ts": "never",
+        "tsx": "never"
+      }
+    ]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".ts", ".tsx"]
+      }
+    }
   }
 }
