--- a/frontend/mobile/package.json
+++ b/frontend/mobile/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react-native": "^3.11.0",
     "prettier": "^2.3.2",
     "typescript": "~4.0.0"
   },
